--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
 </canvas>
 
-<script src="main.js"></script>
+<section id="main">
+
+</section>
+
+<script src="js/main.js"></script>
 </body>
 </html>
