--- a/index.html
+++ b/index.html
@@ -2,16 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Canvas Proof of Concept</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
-</canvas>
 
-<section id="main">
+<div id="wrapper">
+    <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+    </canvas>
 
-</section>
+    <section id="first">
 
+    </section>
+
+    <section id="second">
+
+    </section>
+
+    <section id="third">
+
+    </section>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
