--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 <body>
 
 <div id="wrapper">
-    <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+    <canvas id="myCanvas" width="200" height="100">
     </canvas>
 
     <section id="first">
-
+        <div class="container">
+            <a href="pixi.html">GO TO PIXI JS TEST</a>
+        </div>
     </section>
 
     <section id="second">
-
+        <div class="container">
+            <a href="pixi.html">GO TO PIXI JS TEST</a>
+        </div>
     </section>
 
     <section id="third">
-
+        <div class="container">
+            <a href="pixi.html">GO TO PIXI JS TEST</a>
+        </div>
     </section>
 </div>
 
