--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
 
     <section id="first">
         <div class="container">
-            <a href="pixi.html">GO TO PIXI JS TEST</a>
+            <a href="pixi.html">GO TO PIXI JS TEST</a><br>
+            <a href="gyro.html">GO TO GYRO JS TEST</a>
         </div>
     </section>
 
     <section id="second">
         <div class="container">
-            <a href="pixi.html">GO TO PIXI JS TEST</a>
         </div>
     </section>
 
     <section id="third">
         <div class="container">
-            <a href="pixi.html">GO TO PIXI JS TEST</a>
         </div>
     </section>
 </div>
