--- a/gyro.html
+++ b/gyro.html
@@ -9,8 +9,8 @@
 <body>
 
 <div id="wrapper">
-    <!--<canvas id="gyroCanvas" width="300" height="300">
-    </canvas>-->
+    <canvas id="gyroCanvas" width="300" height="300">
+    </canvas>
 
     <section id="gyro">
         <div class="container">
